remove items that do not build in OpenCV 3.3.1 due to deprecated functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set( CMAKE_CXX_FLAGS "-O3 -Wall ${CMAKE_CXX_FLAGS}" )
 # linux specific stuff
 
 IF ( UNIX )
-   set( CMAKE_PREFIX_PATH "/opt/opencv-2.4" )
+   set( CMAKE_PREFIX_PATH "/opt/opencv" )
    set( CMAKE_CXX_FLAGS "-m64 -Ofast -flto -march=native -funroll-loops ${CMAKE_CXX_FLAGS}" )
    set_property(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS TRUE)
    MESSAGE( "LINUX CONFIG" )
@@ -50,9 +50,9 @@ project(canny)
 add_executable(canny canny.cc)
 target_link_libraries( canny ${OpenCV_LIBS} )
 
-project(changedetection)
-add_executable(changedetection changedetection.cc)
-target_link_libraries( changedetection ${OpenCV_LIBS} )
+# project(changedetection)
+# add_executable(changedetection changedetection.cc)
+# target_link_libraries( changedetection ${OpenCV_LIBS} )
 
 project(colourshape)
 add_executable(colourshape colourshape.cc)
@@ -70,9 +70,9 @@ project(contraststretch)
 add_executable(contraststretch contraststretch.cc)
 target_link_libraries( contraststretch ${OpenCV_LIBS} )
 
-project(deinterlace)
-add_executable(deinterlace deinterlace.cc)
-target_link_libraries( deinterlace ${OpenCV_LIBS} )
+# project(deinterlace)
+# add_executable(deinterlace deinterlace.cc)
+# target_link_libraries( deinterlace ${OpenCV_LIBS} )
 
 project(dft_bandpass)
 add_executable(dft_bandpass dft_bandpass.cc)
@@ -98,9 +98,9 @@ project(dft_lowpass)
 add_executable(dft_lowpass dft_lowpass.cc)
 target_link_libraries( dft_lowpass ${OpenCV_LIBS} )
 
-project(edge_based_segmentation)
-add_executable(edge_based_segmentation edge_based_segmentation.cc)
-target_link_libraries( edge_based_segmentation ${OpenCV_LIBS} )
+# project(edge_based_segmentation)
+# add_executable(edge_based_segmentation edge_based_segmentation.cc)
+# target_link_libraries( edge_based_segmentation ${OpenCV_LIBS} )
 
 project(eigenimage_based_recognition)
 add_executable(eigenimage_based_recognition eigenimage_based_recognition.cc)
@@ -114,13 +114,13 @@ project(exponential)
 add_executable(exponential exponential.cc)
 target_link_libraries( exponential ${OpenCV_LIBS} )
 
-project(face_detection)
-add_executable(face_detection face_detection.cc)
-target_link_libraries( face_detection ${OpenCV_LIBS} )
+# project(face_detection)
+# add_executable(face_detection face_detection.cc)
+# target_link_libraries( face_detection ${OpenCV_LIBS} )
 
-project(fgbg_segmentation)
-add_executable(fgbg_segmentation fgbg_segmentation.cc)
-target_link_libraries( fgbg_segmentation ${OpenCV_LIBS} )
+# project(fgbg_segmentation)
+# add_executable(fgbg_segmentation fgbg_segmentation.cc)
+# target_link_libraries( fgbg_segmentation ${OpenCV_LIBS} )
 
 project(fourier)
 add_executable(fourier fourier.cc)
